--- a/contact.html
+++ b/contact.html
@@ -445,7 +445,8 @@
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light shadow sticky-top p-0" style="backdrop-filter: blur(8px); background: rgba(255,255,255,0.92);">
         <a href="index.html" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
-            <h2 class="m-0 text-primary"><i class="fa fa-laptop-code me-3"></i>Instituto Sucre</h2>
+            <img src="img/logo.png" alt="Logo Instituto Sucre" style="height:48px;width:auto;margin-right:12px;">
+            <h2 class="m-0 text-primary" style="font-size:1.5rem;">Instituto Sucre</h2>
         </a>
         <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
