--- a/index.html
+++ b/index.html
@@ -250,16 +250,21 @@
         .footer {
             border-radius: 1.2rem 1.2rem 0 0;
             background: #003366 !important;
+            color: #fff !important;
         }
 
         .footer .btn-link {
-            color: #adb5bd;
+            color: #fff !important;
             transition: color 0.2s;
         }
 
         .footer .btn-link:hover {
-            color: #3498db;
+            color: #3498db !important;
             text-decoration: underline;
+        }
+
+        .footer-menu a, .footer p, .footer li, .footer h4, .footer .copyright, .footer .btn-outline-light, .footer .btn-outline-light .fab {
+            color: #fff !important;
         }
 
         .section-title {
