--- a/404.html
+++ b/404.html
@@ -96,16 +96,21 @@
         .footer {
             border-radius: 1.2rem 1.2rem 0 0;
             background: linear-gradient(180deg, #212529 80%, #0d6efd 100%);
+            color: #f4f4f4 !important;
         }
 
         .footer .btn-link {
-            color: #adb5bd;
+            color: #f4f4f4 !important;
             transition: color 0.2s;
         }
 
         .footer .btn-link:hover {
-            color: #fff;
+            color: #3498db !important;
             text-decoration: underline;
+        }
+
+        .footer-menu a, .footer p, .footer li, .footer h4 {
+            color: #f4f4f4 !important;
         }
 
         .section-title {
@@ -291,7 +296,8 @@
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light shadow sticky-top p-0" style="backdrop-filter: blur(8px); background: rgba(255,255,255,0.92);">
         <a href="index.html" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
-            <h2 class="m-0 text-primary"><i class="fa fa-laptop-code me-3"></i>Instituto Sucre</h2>
+            <img src="img/logo.png" alt="Logo Instituto Sucre" style="height:48px;width:auto;margin-right:12px;">
+            <h2 class="m-0 text-primary" style="font-size:1.5rem;">Instituto Sucre</h2>
         </a>
         <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
